Added all logic refered to api gateway